# mine_sweep

./: README.md
descibe_mine_sweep_distriction/: CMakeLists.txt
descibe_mine_sweep_distriction/build-descibe_mine_sweep_distriction-not_config_default_compiler_5_9_7_GCC_64bit-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  descibe_mine_sweep_distriction.cbp
descibe_mine_sweep_distriction/demos/call_lib/src/: main.cpp
descibe_mine_sweep_distriction/include/descibe_mine_sweep_distriction/: descibe_mine_sweep_distriction.h  descibe_mine_sweep_distriction.h.autosave
descibe_mine_sweep_distriction/src/: descibe_mine_sweep_distriction.cpp  descibe_mine_sweep_distriction.cpp.autosave
doc/: design.md
screenshot/: CMakeLists.txt
screenshot/include/screenshot/: screenshot.h
screenshot/src/: screenshot.cpp
screenshot/test/demo_call_com/src/: main.cpp
test/get_run_processing/src/: main.cpp  win_proc.cpp
